--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         </div>
         <div class="resume_right">
             <div class="resume_item resume_namerole">
-                <div class="name">Rosie Jackson</div>
-                <div class="role">UI Designer</div>
+                <div class="name">Gledys Del Mar Muguerza Trompiz</div>
+                <div class="role">Frontend Developer</div>
             </div>
             <div class="resume_item resume_education">
                 <div class="resume_title">Education</div>
@@ -181,5 +181,6 @@
             </div>
         </div>
     </div>
+    <script></script>
 </body>
 </html>
