--- a/index.html
+++ b/index.html
@@ -5,182 +5,167 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cv--Resume</title>
+    <link rel="shortcut icon" href="./images/myfavicon.svg" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e7d4789bf7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="resume_wrapper">
-        <div class="resume_left">
-            <div class="resume_image">
-                <img src="photo.jpg" alt="Resume_image">
-            </div>
-            <div class="resume_bottom">
-                <div class="resume_item resume_namerole">
-                    <div class="name">Gledys Del Mar Muguerza Trompiz</div>
-                    <div class="role">Frontend Developer</div>
-                </div>
-                <div class="resume_item resume_profile">
-                    <div class="resume_title">Profile</div>
-                    <div class="resume_info"></div>
-                </div>
-                <div class="resume_item resume_address">
-                    <div class="resume_title">Address</div>
-                    <div class="resume_info">
-                        18th home,<br/>
-                        woods street,<br/>
-                        Gran Buenos Aires, Argentina.
-                    </div>
-                </div>
-                <div class="resume_item resume_contact">
-                    <div class="resume_title">Contact</div>
-                    <div class="resume_info">
-                        <div class="resume_subtitle">Phone</div>
-                        <div class="resume_subinfo">+54 11 32126898</div>
-                    </div>
-                    <div class="resume_info">
-                        <div class="resume_subtitle">Email</div>
-                        <div class="resume_subinfo">gdys92@gmail.com</div>
-                    </div>
-                </div>
-                <div class="resume_item resume_skills">
-                    <div class="resume_title">Skills</div>
-                    <div class="resume_info">
-                        <div class="skills_list">
-                            <div class="skills_left">HTML</div>
-                            <div class="skills_bar">
-                                <p>
-                                    <span style="width: 90%"></span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="skills_list">
-                            <div class="skills_left">CSS</div>
-                            <div class="skills_bar">
-                                <p>
-                                    <span style="width: 80%"></span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="skills_list">
-                            <div class="skills_left">Javascript</div>
-                            <div class="skills_bar">
-                                <p>
-                                    <span style="width: 50%"></span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="skills_list">
-                            <div class="skills_left">Photoshop</div>
-                            <div class="skills_bar">
-                                <p>
-                                    <span style="width: 95%"></span>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="resume_right">
-            <div class="resume_item resume_namerole">
-                <div class="name">Gledys Del Mar Muguerza Trompiz</div>
-                <div class="role">Frontend Developer</div>
-            </div>
-            <div class="resume_item resume_education">
-                <div class="resume_title">Education</div>
-                <div class="resume_info">
-                    <div class="resume_data">
-                        <div class="year">2000 - 2010</div>
-                        <div class="content">
-                            <p>Title</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <div class="resume_data">
-                        <div class="year">2010 - 2013</div>
-                        <div class="content">
-                            <p>Title</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <div class="resume_data">
-                        <div class="year">2013 - 2015</div>
-                        <div class="content">
-                            <p>Title</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="resume_item resume_experience">
-                <div class="resume_title">Experience</div>
-                <div class="resume_info">
-                    <div class="resume_data">
-                        <div class="year">2000 - 2010</div>
-                        <div class="content">
-                            <p>Title</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <div class="resume_data">
-                        <div class="year">2010 - 2013</div>
-                        <div class="content">
-                            <p>Title</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <div class="resume_data">
-                        <div class="year">2013 - 2015</div>
-                        <div class="content">
-                            <p>Title</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <div class="resume_data">
-                        <div class="year">2013 - 2015</div>
-                        <div class="content">
-                            <p>Title</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <div class="resume_data">
-                        <div class="year">2013 - 2015</div>
-                        <div class="content">
-                            <p>Title</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="resume_item resmue_interests">
-                <div class="resume_title">Interests</div>
-                <div class="resume_info">
-                    <div class="interests">
-                        <div class="int_icon">
-                            <i class="fas fa-volleyball-ball"></i>
-                        </div>
-                        <div class="int_data">Volleyball</div>
-                    </div>
-                    <div class="interests">
-                        <div class="int_icon">
-                            <i class="fas fa-book-open"></i>
-                        </div>
-                        <div class="int_data">Reading</div>
-                    </div>
-                    <div class="interests">
-                        <div class="int_icon">
-                            <i class="fas fa-film"></i>
-                        </div>
-                        <div class="int_data">Movies</div>
-                    </div>
-                    <div class="interests">
-                        <div class="int_icon">
-                            <i class="fas fa-biking"></i>
-                        </div>
-                        <div class="int_data">Riding</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+<div class="resume_wrapper">
+	<div class="resume_left">
+		<div class="resume_image">
+			<img src="./images/photo.jpg" alt="Resume_image">
+		</div>
+
+		<div class="resume_bottom">
+			<div class="resume_item resume_namerole">
+				<div class="name">GLEDYS DEL MAR MUGUERZA TROMPIZ</div>
+				<div class="role">Frontend Developer</div>
+			</div>
+
+            <div class="resume_item resume_contact">
+				<div class="resume_title">Contact</div>
+				<div class="resume_info">
+					<div class="resume_subtitle">Phone</div>
+					<div class="resume_subinfo">+54 11 32126898</div>
+				</div>
+				<div class="resume_info">
+					<div class="resume_subtitle">Email</div>
+					<div class="resume_subinfo">gdys92@gmail.com</div>
+				</div>
+			</div>
+			<div class="resume_item resume_address">
+				<div class="resume_title">Address</div>
+				<div class="resume_info">
+					Gran Buenos Aires, Argentina.
+				</div>
+			</div>
+			
+			<div class="resume_item resume_skills">
+				<div class="resume_title">Skills</div>
+				<div class="resume_info">
+					<div class="skills_list">
+						<div class="skills_left">HTML</div>
+						<div class="skills_bar">
+							<p>
+								<span style="width: 100%"></span>
+							</p>
+						</div>
+					</div>
+					<div class="skills_list">
+						<div class="skills_left">CSS</div>
+						<div class="skills_bar">
+							<p>
+								<span style="width: 100%"></span>
+							</p>
+						</div>
+					</div>
+					<div class="skills_list">
+						<div class="skills_left">Javascript</div>
+						<div class="skills_bar">
+							<p>
+								<span style="width: 95%"></span>
+							</p>
+						</div>
+					</div>
+                    <div class="skills_list">
+						<div class="skills_left">React</div>
+						<div class="skills_bar">
+							<p>
+								<span style="width: 90%"></span>
+							</p>
+						</div>
+					</div>
+                    <div class="skills_list">
+						<div class="skills_left">Angular</div>
+						<div class="skills_bar">
+							<p>
+								<span style="width: 89%"></span>
+							</p>
+						</div>
+					</div>
+					<div class="skills_list">
+						<div class="skills_left">Gimp</div>
+						<div class="skills_bar">
+							<p>
+								<span style="width: 95%"></span>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="resume_right">
+		<div class="resume_item resume_namerole">
+			<div class="name">GLEDYS DEL MAR MUGUERZA TROMPIZ</div>
+			<div class="role">Frontend Developer</div>
+		</div>
+        
+        <div class="resume_item resume_experience">
+			<div class="resume_title">Experience</div>
+			<div class="resume_info">
+				<div class="resume_data">
+					<div class="year">2017 - Present</div>
+					<div class="content">
+						<p>Cognizant Technology Solutions.</p>
+						<p>• Assemble the visual presentation of the template in PSD or 
+                            some other format for vector graphics.</p>
+                        <p>• MEAN application development (Angular, Express.js, Node.js and MongoDB).</p>
+                        <p>• MERN application development (React.js, Express.js, Next.js, Node.js and MongoDB).</p>
+                        <p>• Testing in multiple browsers and devices.</p>
+                        <p>• Responsive / mobile design.</p>     
+					</div>
+				</div>
+			</div>
+		</div>
+		
+        <div class="resume_item resume_education">
+			<div class="resume_title">Education</div>
+			<div class="resume_info">
+				<div class="resume_data">
+					<div class="year">2000 - 2010</div>
+					<div class="content">
+						<p>Acamica - Full Stack Web Development</p>
+						<p>HTML AND CSS: Website layout using HTML and apply the
+                            styles you want with CSS</p>
+                        <p>JavaScript: Each behavior that happens on a website, define
+                            actions, and communicate with external services is captured</p>
+                        <p>BACK-END: Applications that persistently store data will be
+                            performed using database management.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="resume_item resmue_interests">
+			<div class="resume_title">Interests</div>
+			<div class="resume_info">
+				<div class="interests">
+					<div class="int_icon">
+						<i class="fas fa-book-open"></i>
+					</div>
+					<div class="int_data">Reading</div>
+				</div>
+				<div class="interests">
+					<div class="int_icon">
+						<i class="fas fa-film"></i>
+					</div>
+					<div class="int_data">Movies</div>
+				</div>
+				<div class="interests">
+					<div class="int_icon">
+						<i class="fas fa-biking"></i>
+					</div>
+					<div class="int_data">Riding</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
     <script></script>
+
 </body>
 </html>
