--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
 		</div>
 	</div>
 	<div class="resume_right">
+
+        <div class="container">
+            <div class="langWrap">
+                <a href="#" language='english' class="active">EN</a>
+                <a href="#" language='spanish'>ES</a>
+            </div>
+    
+            <div class="content">
+                <h2 class="title">Hello World</h2>
+                <p class="description"></p>
+            </div>
+        </div>
+
 		<div class="resume_item resume_namerole">
 			<div class="name">GLEDYS DEL MAR MUGUERZA TROMPIZ</div>
 			<div class="role">Frontend Developer</div>
@@ -126,7 +139,7 @@
 			<div class="resume_title">Education</div>
 			<div class="resume_info">
 				<div class="resume_data">
-					<div class="year">2000 - 2010</div>
+					<div class="year">2019 - 2020</div>
 					<div class="content">
 						<p>Acamica - Full Stack Web Development</p>
 						<p>HTML AND CSS: Website layout using HTML and apply the
@@ -165,7 +178,7 @@
 		</div>
 	</div>
 </div>
-    <script></script>
+    <script src="index.js"></script>
 
 </body>
 </html>
