--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		</div>
 
 		<div class="resume_item resume_namerole">
-			<div class="name">GLEDYS DEL MAR MUGUERZA TROMPIZ</div>
+			<h1 class="name">GLEDYS DEL MAR MUGUERZA TROMPIZ</h1>
 			<h2 class="role">Frontend Developer</h2>
 		</div>
         
@@ -126,12 +126,12 @@
 					<div class="year">2017 - Present</div>
 					<div class="content">
 						<h3 class="work">Cognizant Technology Solutions.</h3>
-						<p class="worksub">• Assemble the visual presentation of the template in PSD or 
+						<h4 class="worksub">• Assemble the visual presentation of the template in PSD or 
 							some other format for vector graphics.
 						• MEAN application development (Angular, Express.js, Node.js and MongoDB).
 						• MERN application development (React.js, Express.js, Next.js, Node.js and MongoDB).
 						• Testing in multiple browsers and devices.
-						• Responsive / mobile design.</p>	     
+						• Responsive / mobile design.</h4>	     
 					</div>
 				</div>
 			</div>
@@ -143,13 +143,13 @@
 				<div class="resume_data">
 					<div class="year">2019 - 2020</div>
 					<div class="content">
-						<p class="education">Acamica - Full Stack Web Development</p>
-						<p class="educationsSub">HTML AND CSS: Website layout using HTML and apply the
+						<div class="education">Acamica - Full Stack Web Development</div>
+						<h5 class="educationsSub">HTML AND CSS: Website layout using HTML and apply the
                             styles you want with CSS.
                         JavaScript: Each behavior that happens on a website, define
                             actions, and communicate with external services is captured.
                         BACK-END: Applications that persistently store data will be
-                            performed using database management.</p>
+                            performed using database management.</h5>
 					</div>
 				</div>
 			</div>
