--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 					<div class="int_icon">
 						<i class="fas fa-biking"></i>
 					</div>
-					<div class="int_data">Riding</div>
+					<div class="int_data">Cycling</div>
 				</div>
 			</div>
 		</div>
